--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -52,5 +52,9 @@ databaseChangeLog:
       relativeToChangelogFile: true
 
   - include:
+      file: 014-user-action-audit.sql
+      relativeToChangelogFile: true
+
+  - include:
       file: seed/dev-seed.yaml
       relativeToChangelogFile: true
