--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 		<mockito-core.version>5.18.0</mockito-core.version>
 		<twilio.version>10.9.2</twilio.version>
 		<bucket4j-core.version>8.10.1</bucket4j-core.version>
+		<caffeine.version>3.1.8</caffeine.version>
+		<hibernate-types-60.version>2.21.1</hibernate-types-60.version>
 	</properties>
 
 	<dependencies>
@@ -104,6 +106,20 @@
 			<groupId>com.bucket4j</groupId>
 			<artifactId>bucket4j-core</artifactId>
 			<version>${bucket4j-core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+			<version>${caffeine.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.vladmihalcea</groupId>
+			<artifactId>hibernate-types-60</artifactId>
+			<version>${hibernate-types-60.version}</version>
 		</dependency>
 	</dependencies>
 
