--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,6 +47,7 @@ spring:
     expiry-minutes: ${RESET_TTL_MINUTES:60}
 
   liquibase:
+    clear-checksums: true
     contexts: dev-seed
 
   sms:
@@ -62,10 +63,17 @@ spring:
       site: ${RECAPTCHA_SITE_KEY:}
       secret: ${RECAPTCHA_SECRET_KEY:}
 
+  jpa:
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+
 logging:
   level:
     com.mishchuk.autotrade.config.TokenAuthFilter: DEBUG
     org.springframework.security: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.orm.jdbc.bind: TRACE
 
 email:
   verification:
