--- a/src/main/resources/db/changelog/seed/dev-seed.yaml
+++ b/src/main/resources/db/changelog/seed/dev-seed.yaml
@@ -9,7 +9,7 @@ databaseChangeLog:
             sql: |
               CREATE EXTENSION IF NOT EXISTS pgcrypto;
 
-  # 1) SUPER_ADMIN (як у твоєму прикладі)
+  # 1) SUPER_ADMIN
   - changeSet:
       id: dev-seed-user-superadmin
       author: dev
@@ -20,15 +20,14 @@ databaseChangeLog:
             sql: |
               INSERT INTO users (
                 id, first_name, last_name, birth_day, phone_number, email,
-                password, role, status, created_at, updated_at, token
+                password, role, status, created_at, updated_at
               )
               VALUES (
                 '11111111-1111-1111-1111-111111111111',
                 'Test', 'Superadmin', '1990-01-01',
                 '+380000000000', 'admin@autotrade.local',
                 '{bcrypt}' || crypt('Admin123!', gen_salt('bf')),
-                'ROLE_SUPER_ADMIN', 'ACTIVE', now(), now(),
-                'aaaaaaaa-aaaa-4aaa-aaaa-aaaaaaaaaaaa'
+                'ROLE_SUPER_ADMIN', 'ACTIVE', now(), now()
               )
               ON CONFLICT (id) DO NOTHING;
 
@@ -43,19 +42,18 @@ databaseChangeLog:
             sql: |
               INSERT INTO users (
                 id, first_name, last_name, birth_day, phone_number, email,
-                password, role, status, created_at, updated_at, token
+                password, role, status, created_at, updated_at
               )
               VALUES (
                 '11111111-1111-1111-1111-222222222222',
                 'Alice', 'Admin', '1991-02-02',
                 '+380000000001', 'admin2@autotrade.local',
                 '{bcrypt}' || crypt('Admin123!', gen_salt('bf')),
-                'ROLE_ADMIN', 'ACTIVE', now(), now(),
-                'bbbbbbbb-bbbb-4bbb-bbbb-bbbbbbbbbbbb'
+                'ROLE_ADMIN', 'ACTIVE', now(), now()
               )
               ON CONFLICT (id) DO NOTHING;
 
-  # 3) USER (звичайний користувач)
+  # 3) USER
   - changeSet:
       id: dev-seed-user-customer
       author: dev
@@ -66,19 +64,18 @@ databaseChangeLog:
             sql: |
               INSERT INTO users (
                 id, first_name, last_name, birth_day, phone_number, email,
-                password, role, status, created_at, updated_at, token
+                password, role, status, created_at, updated_at
               )
               VALUES (
                 '11111111-1111-1111-1111-333333333333',
                 'Bob', 'User', '1992-03-03',
                 '+380000000002', 'user@autotrade.local',
                 '{bcrypt}' || crypt('User123!', gen_salt('bf')),
-                'ROLE_USER', 'ACTIVE', now(), now(),
-                'cccccccc-cccc-4ccc-cccc-cccccccccccc'
+                'ROLE_USER', 'ACTIVE', now(), now()
               )
               ON CONFLICT (id) DO NOTHING;
 
-  # 4) ACCOUNT -> SUPER_ADMIN (як у тебе)
+  # 4) ACCOUNT -> SUPER_ADMIN
   - changeSet:
       id: dev-seed-account-sa
       author: dev
@@ -97,7 +94,7 @@ databaseChangeLog:
               )
               ON CONFLICT (id) DO NOTHING;
 
-  # 5) ACCOUNT -> ADMIN (простий стенд акаунт)
+  # 5) ACCOUNT -> ADMIN
   - changeSet:
       id: dev-seed-account-admin
       author: dev
@@ -115,7 +112,7 @@ databaseChangeLog:
               )
               ON CONFLICT (id) DO NOTHING;
 
-  # 6) ACCOUNTs -> USER (два акаунти, по одному на кабінет)
+  # 6) ACCOUNTs -> USER
   - changeSet:
       id: dev-seed-account-user-1
       author: dev
@@ -150,7 +147,7 @@ databaseChangeLog:
               )
               ON CONFLICT (id) DO NOTHING;
 
-  # 7) CABINET -> SUPER_ADMIN (як у тебе)
+  # 7) CABINET -> SUPER_ADMIN
   - changeSet:
       id: dev-seed-cabinet-sa
       author: dev
@@ -169,7 +166,7 @@ databaseChangeLog:
               )
               ON CONFLICT (id) DO NOTHING;
 
-  # 8) CABINETs -> USER (два кабінети)
+  # 8) CABINETs -> USER
   - changeSet:
       id: dev-seed-cabinet-user-1
       author: dev
@@ -206,7 +203,7 @@ databaseChangeLog:
               )
               ON CONFLICT (id) DO NOTHING;
 
-  # 9) SOURCE -> SA account (як у тебе)
+  # 9) SOURCE -> SA account
   - changeSet:
       id: dev-seed-source-sa
       author: dev
@@ -226,7 +223,7 @@ databaseChangeLog:
               )
               ON CONFLICT (id) DO NOTHING;
 
-  # 10) 3 джерела для USER (привʼязані до Account A)
+  # 10) 3 джерела для USER
   - changeSet:
       id: dev-seed-source-user-1
       author: dev
@@ -243,7 +240,7 @@ databaseChangeLog:
               ('55555555-3333-4333-8333-333333333333','Webhook Bot','WEBHOOK','ACTIVE','user-src-token-3',NULL,'{"version":"1"}'::jsonb,now(),now(),'22222222-2222-2222-2222-333333333333')
               ON CONFLICT (id) DO NOTHING;
 
-  # 11) Link SA cabinet <-> SA source (як у тебе)
+  # 11) Link SA cabinet <-> SA source
   - changeSet:
       id: dev-seed-cabinet-source-sa
       author: dev
@@ -260,7 +257,7 @@ databaseChangeLog:
               )
               ON CONFLICT (id) DO NOTHING;
 
-  # 12) Link USER cabinets <-> three sources (по 3 посилання на кожен кабінет)
+  # 12) Link USER cabinets <-> sources
   - changeSet:
       id: dev-seed-cabinet-source-user-A
       author: dev
@@ -287,21 +284,23 @@ databaseChangeLog:
               ('44444444-bbbb-4bbb-8bbb-000000000003','33333333-3333-3333-3333-555555555555','55555555-3333-4333-8333-333333333333','ACTIVE')
               ON CONFLICT (id) DO NOTHING;
 
-  # 13) Email verification tokens (вже підтверджені) для всіх трьох
+  # 13) Email verification tokens через user_action_tokens
   - changeSet:
-      id: dev-seed-email-tokens
+      id: dev-seed-email-tokens-uats
       author: dev
       context: dev-seed
       changes:
         - sql:
             sql: |
-              INSERT INTO email_verification_tokens (id, token, expires_at, confirmed_at, created_at, user_id) VALUES
-              ('66666666-6666-6666-6666-666666666666','verify-dev-token', now()+interval '1 day', now(), now(), '11111111-1111-1111-1111-111111111111'),
-              ('66666666-6666-6666-6666-777777777777','verify-admin-token', now()+interval '1 day', now(), now(), '11111111-1111-1111-1111-222222222222'),
-              ('66666666-6666-6666-6666-888888888888','verify-user-token',  now()+interval '1 day', now(), now(), '11111111-1111-1111-1111-333333333333')
+              INSERT INTO user_action_tokens (
+                id, token, purpose, channel, data, expires_at, consumed_at, created_at, user_id
+              ) VALUES
+              ('66666666-6666-6666-6666-666666666666','verify-dev-token','EMAIL_VERIFICATION','EMAIL','{}'::jsonb, now()+interval '1 day', now(), now(), '11111111-1111-1111-1111-111111111111'),
+              ('66666666-6666-6666-6666-777777777777','verify-admin-token','EMAIL_VERIFICATION','EMAIL','{}'::jsonb, now()+interval '1 day', now(), now(), '11111111-1111-1111-1111-222222222222'),
+              ('66666666-6666-6666-6666-888888888888','verify-user-token','EMAIL_VERIFICATION','EMAIL','{}'::jsonb, now()+interval '1 day', now(), now(), '11111111-1111-1111-1111-333333333333')
               ON CONFLICT (id) DO NOTHING;
 
-  # 14) Auth refresh tokens (демо)
+  # 14) Auth refresh tokens
   - changeSet:
       id: dev-seed-auth-tokens
       author: dev
@@ -315,8 +314,7 @@ databaseChangeLog:
               ('77777777-7777-7777-7777-999999999999','11111111-1111-1111-1111-333333333333','dev-refresh-token-cccccccccccccccccccccccccccccccc', now()+interval '30 days', now())
               ON CONFLICT (id) DO NOTHING;
 
-  # 15) 5 транзакцій для кожного USER-кабінету (A та B) — всього 10.
-  #     Ціни й баланси умовні; source_id розподілено по колу.
+  # 15) 5 транзакцій для кожного USER-кабінету
   - changeSet:
       id: dev-seed-tx-user-cabinet-A
       author: dev
@@ -335,30 +333,4 @@ databaseChangeLog:
               ('55555555-aaaa-4aaa-8aaa-000000000003','SOLUSDT',12.0,'BUY',  now()-interval '7 min', NULL, 12030.00, NULL, now(),
                 '11111111-1111-1111-1111-333333333333','22222222-2222-2222-2222-333333333333','33333333-3333-3333-3333-444444444444','55555555-3333-4333-8333-333333333333'),
               ('55555555-aaaa-4aaa-8aaa-000000000004','BTCUSDT',0.05,'SELL', now()-interval '6 min', NULL, 12010.00, NULL, now(),
-                '11111111-1111-1111-1111-333333333333','22222222-2222-2222-2222-333333333333','33333333-3333-3333-3333-444444444444','55555555-1111-4111-8111-111111111111'),
-              ('55555555-aaaa-4aaa-8aaa-000000000005','ETHUSDT',0.80,'BUY',  now()-interval '5 min', NULL, 12050.00, NULL, now(),
-                '11111111-1111-1111-1111-333333333333','22222222-2222-2222-2222-333333333333','33333333-3333-3333-3333-444444444444','55555555-2222-4222-8222-222222222222')
-              ON CONFLICT (id) DO NOTHING;
-
-  - changeSet:
-      id: dev-seed-tx-user-cabinet-B
-      author: dev
-      context: dev-seed
-      changes:
-        - sql:
-            sql: |
-              INSERT INTO transactions (
-                id, symbol, amount, direction, opened_at, closed_at, balance_after, is_profitable, created_at,
-                user_id, account_id, cabinet_id, source_id
-              ) VALUES
-              ('55555555-bbbb-4bbb-8bbb-000000000001','BTCUSDT',0.12,'BUY',  now()-interval '9 min', NULL, 13920.00, NULL, now(),
-                '11111111-1111-1111-1111-333333333333','22222222-2222-2222-2222-444444444444','33333333-3333-3333-3333-555555555555','55555555-1111-4111-8111-111111111111'),
-              ('55555555-bbbb-4bbb-8bbb-000000000002','ETHUSDT',1.10,'SELL', now()-interval '8 min', NULL, 13940.00, NULL, now(),
-                '11111111-1111-1111-1111-333333333333','22222222-2222-2222-2222-444444444444','33333333-3333-3333-3333-555555555555','55555555-2222-4222-8222-222222222222'),
-              ('55555555-bbbb-4bbb-8bbb-000000000003','SOLUSDT',10.0,'BUY',  now()-interval '7 min', NULL, 13990.00, NULL, now(),
-                '11111111-1111-1111-1111-333333333333','22222222-2222-2222-2222-444444444444','33333333-3333-3333-3333-555555555555','55555555-3333-4333-8333-333333333333'),
-              ('55555555-bbbb-4bbb-8bbb-000000000004','BTCUSDT',0.07,'SELL', now()-interval '6 min', NULL, 13960.00, NULL, now(),
-                '11111111-1111-1111-1111-333333333333','22222222-2222-2222-2222-444444444444','33333333-3333-3333-3333-555555555555','55555555-1111-4111-8111-111111111111'),
-              ('55555555-bbbb-4bbb-8bbb-000000000005','ETHUSDT',0.70,'BUY',  now()-interval '5 min', NULL, 14010.00, NULL, now(),
-                '11111111-1111-1111-1111-333333333333','22222222-2222-2222-2222-444444444444','33333333-3333-3333-3333-555555555555','55555555-2222-4222-8222-222222222222')
-              ON CONFLICT (id) DO NOTHING;
+                '11111111-1111-1111-1111-333333333333','22222222-2222-2222-2222-333333333333','33333333-3333-3333-3333-444444444444','55555555-1111-4111-
